--- a/Life-Style/public/CSS/header.css
+++ b/Life-Style/public/CSS/header.css
@@ -40,6 +40,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
+    margin: 0%;
 }
 
 img {
@@ -77,4 +78,28 @@ a:hover {
 a:active {
     color: rgb(124, 124, 124);
     text-decoration: underline;
+}
+
+.logout {
+    margin-right: 1%;
+    font-size: 15px;
+    color: black;
+    display: inline-block;
+    border: none;
+    border-radius: 3px;
+    background-color: #f1fcfc;
+    font-family: "Courier New", monospace;
+    cursor: pointer;
+    font-size: 15px;
+    text-decoration: underline;
+}
+
+p {
+    margin: 0%;
+    margin-top: 1%;
+    margin-right: 1.3%;
+    font-size: 30px;
+    color: black;
+    display: inline-block;
+    font-size: 25px;
 }
