--- a/Life-Style/public/CSS/home.css
+++ b/Life-Style/public/CSS/home.css
@@ -1,215 +1,296 @@
 /*HOME PAGE*/
 
 .contenairglobal {
-  margin-top: 4%;
-  width: 100%;
-  padding-bottom: 1%;
-  display: flex;
-  flex-direction: column;
+    margin-top: 4%;
+    width: 100%;
+    padding-bottom: 1%;
+    display: flex;
+    flex-direction: column;
 }
 
 .contenair1 {
-  background-color: rgb(134, 80, 80);
-  margin-top: 1%;
-  width: 99%;
-  padding-bottom: 10%;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
+    background-color: rgb(134, 80, 80);
+    margin-top: 1%;
+    width: 99%;
+    padding-bottom: 10%;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*contenaire 1 content */
 
 .grille1 {
-  max-width: 100%;
-  width: 100%;
-  height: auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 450px);
-  justify-content: center;
-  grid-gap: 20px;
-  margin-top: 1%;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    grid-gap: 61px;
+    margin-top: 1%;
+    margin: 0%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.grid-item1 {
-  width: 450px;
-  height: 300px;
-  background-image: url("../image/image1.png");
-  margin-left: auto;
-  margin-right: auto;
-  background-size: cover;
-  background-position: 50% 60%;
-  background-repeat: no-repeat;
-  object-fit: cover;
+.slide {
+    margin: 2%;
 }
 
-.grid-item2 {
-  width: 450px;
-  height: 300px;
-  background-image: url("../image/image2.jpeg");
-  margin-left: auto;
-  margin-right: auto;
-  background-size: cover;
-  background-position: 30% 100%;
-  background-repeat: no-repeat;
-  object-fit: cover;
-}
-
-.grid-item3 {
-  width: 450px;
-  height: 300px;
-  background-image: url("../image/nikelaylow.jpeg");
-  background-size: cover;
-  background-position: 50% 40%;
-  margin-left: auto;
-  margin-right: auto;
-  background-repeat: no-repeat;
-  object-fit: cover;
+.slide .grid-item1 img {
+    width: 420px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: cover;
+    background-position: 50% 60%;
+    background-repeat: no-repeat;
+    object-fit: cover;
 }
 
 /*  contenair 2 content */
 
 .grille2 {
-  max-width: 100%;
-  margin-top: 8%;
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: row;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 450px);
-  justify-content: center;
-  grid-gap: 20px;
-  margin-left: auto;
-  margin-right: auto;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    grid-gap: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.grid-item5 {
-  width: 680px;
-  height: 675px;
-  background-image: url("../image/shoot2.jpg");
-  background-size: cover;
-  background-position: 50% 60%;
-  background-repeat: no-repeat;
-  object-fit: cover;
+.style {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 2%;
+}
+.style .grid-item5 img {
+    width: 680px;
+    height: 675px;
+    background-size: cover;
+    background-position: 50% 60%;
+    background-repeat: no-repeat;
+    object-fit: cover;
 }
 
 .grid-contenair1 {
-  width: 680px;
-  height: 675px;
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  object-fit: cover;
-  margin-left: 50%;
-  flex-direction: column;
-  display: flex;
+    width: 680px;
+    height: 675px;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    object-fit: cover;
+
+    flex-direction: column;
+    display: flex;
 }
 
-.grid-item6 {
-  width: 692px;
-  height: 337px;
-  background-image: url("../image/shoot1");
-  background-size: cover;
-  background-position: 30% 20%;
-  background-repeat: no-repeat;
-  object-fit: cover;
+.style .grid-item6 img {
+    width: 682px;
+    height: 337px;
+    background-size: cover;
+    background-position: 30% 20%;
+    background-repeat: no-repeat;
+    object-fit: cover;
 }
 
-.grid-item7 {
-  margin-top: 1%;
-  width: 692px;
-  height: 337px;
-  background-image: url("../image/laylow3.jpg");
-  background-size: cover;
-  background-position: 30% 60%;
-  background-repeat: no-repeat;
-  object-fit: cover;
-}
+/*  contenair 3 content */
 
+.style2 {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 2%;
+}
 .grille3 {
-  max-width: 100%;
-  margin-top: 8%;
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: row;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 450px);
-  justify-content: center;
-  grid-gap: 20px;
-  margin-left: auto;
-  margin-right: auto;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    grid-gap: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.grid-item8 {
-  width: 680px;
-  height: 700px;
-  background-image: url("../image/aj1\ .jpg");
-  background-size: cover;
-  background-position: 50% 60%;
-  background-repeat: no-repeat;
-  object-fit: cover;
+.style2 .grid-item8 img {
+    width: 680px;
+    height: 700px;
+    background-size: cover;
+    background-position: 50% 60%;
+    background-repeat: no-repeat;
+    object-fit: cover;
 }
 
-.grid-item9 {
-  width: 680px;
-  height: 700px;
-  background-image: url("../image/nike\ x\ adidas\ .jpg");
-  background-size: cover;
-  background-position: 50% 60%;
-  background-repeat: no-repeat;
-  object-fit: cover;
-  margin-left: 50%;
-}
-
+/*  contenair 4 content */
 .grille4 {
-  max-width: 100%;
-  margin-top: 7%;
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: row;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 450px);
-  justify-content: center;
-  grid-gap: 20px;
-  margin-left: auto;
-  margin-right: auto;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    justify-content: center;
+    grid-gap: 61px;
+    margin-top: 1%;
+    margin: 0%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.grid-item10 {
-  width: 450px;
-  height: 350px;
-  background-image: url("../image/aj1\ Royal\ Blue\ .jpg");
-  margin-left: auto;
-  margin-right: auto;
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  object-fit: cover;
+.sneakers .grid-item10 img {
+    width: 420px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: cover;
+    background-position: 50% 60%;
+    background-repeat: no-repeat;
+    object-fit: cover;
 }
 
-.grid-item11 {
-  width: 450px;
-  height: 350px;
-  background-image: url("../image/wabisabi.jpg");
-  margin-left: auto;
-  margin-right: auto;
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  object-fit: cover;
+.sneakers {
+    margin: 2%;
 }
 
-.grid-item12 {
-  width: 450px;
-  height: 350px;
-  background-image: url("../image/aj4\ offwhite.jpg");
-  margin-left: auto;
-  margin-right: auto;
-  background-size: cover;
-  background-position: 50% 80%;
-  background-repeat: no-repeat;
-  object-fit: cover;
+/*  first media */
+@media screen and (max-width: 1421px) {
+    /*  contenair 2 content */
+    .grille2 {
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        grid-gap: 20px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .style .grid-item5 img {
+        width: 870px;
+        height: 675px;
+        background-size: cover;
+        background-position: 50% 60%;
+        background-repeat: no-repeat;
+        object-fit: cover;
+    }
+
+    .grid-contenair1 {
+        margin: 0%;
+        width: 870px;
+        height: 675px;
+        background-size: cover;
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        object-fit: cover;
+        flex-direction: column;
+        display: flex;
+    }
+
+    .style .grid-item6 img {
+        width: 870px;
+        height: 337px;
+        background-size: cover;
+        background-position: 30% 20%;
+        background-repeat: no-repeat;
+        object-fit: cover;
+    }
+
+    /*  contenair 3 content */
+
+    .grille3 {
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        grid-gap: 20px;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .style2 .grid-item8 img {
+        width: 870px;
+        height: 700px;
+        background-size: cover;
+        background-position: 50% 60%;
+        background-repeat: no-repeat;
+        object-fit: cover;
+    }
+}
+
+/*  second media */
+
+@media screen and (max-width: 935px) {
+    /*  contenair 2 content */
+    .grille2 {
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        grid-gap: 20px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .style .grid-item5 img {
+        width: 420px;
+        height: 675px;
+        background-size: cover;
+        background-position: 50% 60%;
+        background-repeat: no-repeat;
+        object-fit: cover;
+    }
+
+    .grid-contenair1 {
+        margin: 0%;
+        width: 420px;
+        height: 675px;
+        background-size: cover;
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        object-fit: cover;
+        flex-direction: column;
+        display: flex;
+    }
+
+    .style .grid-item6 img {
+        width: 420px;
+        height: 337px;
+        background-size: cover;
+        background-position: 30% 20%;
+        background-repeat: no-repeat;
+        object-fit: cover;
+    }
+
+    /*  contenair 3 content */
+
+    .grille3 {
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        grid-gap: 20px;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .style2 .grid-item8 img {
+        width: 420px;
+        height: 700px;
+        background-size: cover;
+        background-position: 50% 60%;
+        background-repeat: no-repeat;
+        object-fit: cover;
+    }
 }
